Create dump records

--- a/config/application.yml
+++ b/config/application.yml
@@ -2,5 +2,5 @@ GMAIL_USERNAME: ptyxiakiergasia2014@gmail.com
 GMAIL_PASSWORD: ptyxiakiergasia
 
 ADMIN_NAME: admin
-ADMIN_EMAIL: admin@ptyxiakiergasia2014.gr
-ADMIN_PASSWORD: ptyxiakiergasia
+ADMIN_EMAIL: ptyxiakiergasia2014@gmail.com
+ADMIN_PASSWORD: adminadmin
